# fastapi-nextjs

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml
backend/: Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01_create_users.py  02_create_items.py  03_create_orders.py  04_create_order_items.py
backend/app/: main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: health.py  items.py  orders.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/db/seeder/: base.py  item_seeder.py  order_seeder.py  user_seeder.py
backend/app/factories/: base.py  factory_seeder.py  item.py  order.py  order_item.py  user.py
backend/app/models/: base_model.py  item.py  order.py  order_item.py  user.py
backend/app/schemas/: item.py  order.py  user.py
backend/app/services/: item.py  order.py  user.py
backend/scripts/: factory_seed.py  run_seeder.py  seed.py
frontend/: Dockerfile.dev  Dockerfile.prod  README.md  next.config.js  package.json  tailwind.config.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/items/: page.tsx
frontend/src/app/items/create/: page.tsx
frontend/src/app/orders/: page.tsx
frontend/src/app/orders/[id]/: page.tsx
frontend/src/app/users/: page.tsx
frontend/src/components/ui/: checkbox.tsx
frontend/src/services/: api.ts
frontend/src/types/: item.ts  order.ts  user.ts
frontend/src/utils/: date.ts
nginx/: nginx.conf
(+5 files in other folders)
